--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Game</title>
+        <title>Game Javascript</title>
     
         <!-- STYLE -->
         <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
@@ -12,10 +12,14 @@
     
     </head>
 <body>
-    <button onclick=rollDice()>Roll Dice</button>
-    <div id=board></div>
-    <canvas id=canvas width="1000" height="1000"></canvas>
-    <script src="assets/js/ladders.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+    <div class="score"></div>
+    <div class="game">
+        <div class="startScreen">Press here to Start
+            <br>Arrow keys to move
+            <br>If you hit a another car you will lose.</div>
+        <div class="gameArea"></div>
+    </div>
+    <script src="./assets/js/game.js"></script>
+    <script src="./assets/js/bootstrap.min.js"></script>
 </body>
 </html>
